name:                lox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danvonk/lox#readme
license:             GPLv3
license-file:        LICENSE
author:              Dan Vonk
maintainer:          dan@danvonk.com
copyright:           2022 Dan Vonk
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lox
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       transformers
